@@ -3,16 +3,15 @@ plugins {
 
     application
 
-    // afterburner.fx
-    id("org.openjfx.javafxplugin") version("0.1.0")
-
     id("org.beryx.jlink") version "3.1.1"
 }
 
 group = "org.jabref.jabkit"
 version = project.findProperty("projVersion") ?: "100.0.0"
 
-val luceneVersion = "10.2.0"
+val luceneVersion = "10.2.1"
+
+val javafxVersion = "24.0.1"
 
 dependencies {
     implementation(project(":jablib"))
@@ -22,7 +21,13 @@ dependencies {
         exclude( group = "org.openjfx")
     }
 
-    implementation("commons-cli:commons-cli:1.9.0")
+    implementation("org.openjfx:javafx-base:$javafxVersion")
+    implementation("org.openjfx:javafx-controls:$javafxVersion")
+    implementation("org.openjfx:javafx-fxml:$javafxVersion")
+    // implementation("org.openjfx:javafx-graphics:$javafxVersion")
+
+    implementation("info.picocli:picocli:4.7.7")
+    annotationProcessor("info.picocli:picocli-codegen:4.7.7")
 
     // Because of GraalVM quirks, we need to ship that. See https://github.com/jspecify/jspecify/issues/389#issuecomment-1661130973 for details
     implementation("org.jspecify:jspecify:1.0.0")
@@ -52,8 +57,19 @@ dependencies {
 
     implementation("org.apache.lucene:lucene-queryparser:${luceneVersion}")
 
+    implementation("io.github.adr:e-adr:2.0.0-SNAPSHOT")
+
     testImplementation(project(":test-support"))
-    testImplementation("org.mockito:mockito-core:5.17.0")
+    testImplementation("org.mockito:mockito-core:5.18.0") {
+        exclude(group = "net.bytebuddy", module = "byte-buddy")
+    }
+    testImplementation("net.bytebuddy:byte-buddy:1.17.5")
+}
+
+javaModuleTesting.whitebox(testing.suites["test"]) {
+    requires.add("org.junit.jupiter.api")
+    requires.add("org.jabref.testsupport")
+    requires.add("org.mockito")
 }
 
 /*
@@ -62,19 +78,20 @@ jacoco {
 }
 */
 
-javafx {
-    version = "24"
-    // because of afterburner.fx
-    modules = listOf("javafx.base", "javafx.controls", "javafx.fxml")
-}
-
 application {
-    mainClass.set("org.jabref.cli.JabKit")
+    mainClass.set("org.jabref.JabKit")
     mainModule.set("org.jabref.jabkit")
 
     // Also passed to launcher (https://badass-jlink-plugin.beryx.org/releases/latest/#launcher)
     applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=org.jabref.jabkit.merged.module,com.sun.jna,javafx.graphics,org.apache.lucene.core"
+        // Enable JEP 450: Compact Object Headers
+        "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders",
+
+        // Default garbage collector is sufficient for CLI APP
+        // "-XX:+UseZGC", "-XX:+ZUncommit",
+        // "-XX:+UseStringDeduplication",
+
+        "--enable-native-access=com.sun.jna,javafx.graphics,org.apache.lucene.core"
     )
 }
 
@@ -85,13 +102,16 @@ jlink {
         "javafx"
     )
 
+    mergedModuleName = "jabkit.merged.module"
+
     // We keep debug statements - otherwise "--strip-debug" would be included
     addOptions(
         "--compress",
         "zip-6",
         "--no-header-files",
         "--no-man-pages",
-        "--bind-services"
+        "--bind-services",
+        "--add-modules", "jdk.incubator.vector"
     )
 
     launcher {
@@ -100,7 +120,6 @@ jlink {
 
     // TODO: Remove as soon as dependencies are fixed (upstream)
     forceMerge(
-        "controlsfx",
         "bcprov",
         "jaxb",
         "istack",
@@ -108,182 +127,76 @@ jlink {
     )
 
     mergedModule {
-        requires(
-            "com.google.gson"
-        )
-        requires(
-            "com.fasterxml.jackson.annotation"
-        )
-        requires(
-            "com.fasterxml.jackson.databind"
-        )
-        requires(
-            "com.fasterxml.jackson.core"
-        )
-        requires(
-            "com.fasterxml.jackson.datatype.jdk8"
-        )
-        requires(
-            "jakarta.xml.bind"
-        )
-        requires(
-            "java.compiler"
-        )
-        requires(
-            "java.datatransfer"
-        )
-        requires(
-            "java.desktop"
-        )
-        requires(
-            "java.logging"
-        )
-        requires(
-            "java.management"
-        )
-        requires(
-            "java.naming"
-        )
-        requires(
-            "java.net.http"
-        )
-        requires(
-            "java.rmi"
-        )
-        requires(
-            "java.scripting"
-        )
-        requires(
-            "java.security.jgss"
-        )
-        requires(
-            "java.security.sasl"
-        )
-        requires(
-            "java.sql"
-        )
-        requires(
-            "java.sql.rowset"
-        )
-        requires(
-            "java.transaction.xa"
-        )
-        requires(
-            "java.xml"
-        )
-        requires(
-            "javafx.base"
-        )
-        requires(
-            "javafx.controls"
-        )
-        requires(
-            "javafx.fxml"
-        )
-        requires(
-            "javafx.graphics"
-        )
-        requires(
-            "jdk.security.jgss"
-        )
-        requires(
-            "jdk.unsupported"
-        )
-        requires(
-            "jdk.unsupported.desktop"
-        )
-        requires(
-            "jdk.xml.dom"
-        )
-        requires(
-            "org.apache.commons.lang3"
-        )
-        requires(
-            "org.apache.commons.logging"
-        )
-        requires(
-            "org.apache.commons.text"
-        )
-        requires(
-            "org.apache.commons.codec"
-        )
-        requires(
-            "org.apache.commons.io"
-        )
-        requires(
-            "org.apache.commons.compress"
-        )
-        requires(
-            "org.freedesktop.dbus"
-        )
-        requires(
-            "org.jsoup"
-        )
-        requires(
-            "org.slf4j"
-        )
-        requires(
-            "org.tukaani.xz"
-        );
-        uses(
-            "ai.djl.engine.EngineProvider"
-        )
-        uses(
-            "ai.djl.repository.RepositoryFactory"
-        )
-        uses(
-            "ai.djl.repository.zoo.ZooProvider"
-        )
-        uses(
-            "dev.langchain4j.spi.prompt.PromptTemplateFactory"
-        )
-        uses(
-            "kong.unirest.core.json.JsonEngine"
-        )
-        uses(
-            "org.eclipse.jgit.lib.Signer"
-        )
-        uses(
-            "org.eclipse.jgit.transport.SshSessionFactory"
-        )
-        uses(
-            "org.postgresql.shaded.com.ongres.stringprep.Profile"
-        )
-
-        provides(
-            "java.sql.Driver"
-        ).with(
-            "org.postgresql.Driver"
-        )
-        provides(
-            "java.security.Provider"
-        ).with(
+        requires("com.google.gson")
+        requires("com.fasterxml.jackson.annotation")
+        requires("com.fasterxml.jackson.databind")
+        requires("com.fasterxml.jackson.core")
+        requires("com.fasterxml.jackson.datatype.jdk8")
+        requires("jakarta.xml.bind")
+        requires("java.compiler")
+        requires("java.datatransfer")
+        requires("java.desktop")
+        requires("java.logging")
+        requires("java.management")
+        requires("java.naming")
+        requires("java.net.http")
+        requires("java.rmi")
+        requires("java.scripting")
+        requires("java.security.jgss")
+        requires("java.security.sasl")
+        requires("java.sql")
+        requires("java.sql.rowset")
+        requires("java.transaction.xa")
+        requires("java.xml")
+        requires("javafx.base")
+        requires("javafx.controls")
+        requires("javafx.fxml")
+        requires("javafx.graphics")
+        requires("jdk.security.jgss")
+        requires("jdk.unsupported")
+        requires("jdk.unsupported.desktop")
+        requires("jdk.xml.dom")
+        requires("org.apache.commons.lang3")
+        requires("org.apache.commons.logging")
+        requires("org.apache.commons.text")
+        requires("org.apache.commons.codec")
+        requires("org.apache.commons.io")
+        requires("org.apache.commons.compress")
+        requires("org.freedesktop.dbus")
+        requires("org.jsoup")
+        requires("org.slf4j")
+        requires("org.tukaani.xz");
+        uses("ai.djl.engine.EngineProvider")
+        uses("ai.djl.repository.RepositoryFactory")
+        uses("ai.djl.repository.zoo.ZooProvider")
+        uses("dev.langchain4j.spi.prompt.PromptTemplateFactory")
+        uses("kong.unirest.core.json.JsonEngine")
+        uses("org.eclipse.jgit.lib.Signer")
+        uses("org.eclipse.jgit.transport.SshSessionFactory")
+        uses("org.postgresql.shaded.com.ongres.stringprep.Profile")
+        provides("java.sql.Driver").with(
+            "org.postgresql.Driver")
+        provides("java.security.Provider").with(
             "org.bouncycastle.jce.provider.BouncyCastleProvider",
-            "org.bouncycastle.pqc.jcajce.provider.BouncyCastlePQCProvider"
-        )
-        provides(
-            "kong.unirest.core.json.JsonEngine"
-        ).with(
-            "kong.unirest.modules.gson.GsonEngine"
-        )
-        provides(
-            "ai.djl.repository.zoo.ZooProvider"
-        ).with(
+            "org.bouncycastle.pqc.jcajce.provider.BouncyCastlePQCProvider")
+        provides("kong.unirest.core.json.JsonEngine").with(
+            "kong.unirest.modules.gson.GsonEngine")
+        provides("ai.djl.repository.zoo.ZooProvider").with(
             "ai.djl.engine.rust.zoo.RsZooProvider",
             "ai.djl.huggingface.zoo.HfZooProvider",
             "ai.djl.pytorch.zoo.PtZooProvider",
-            "ai.djl.repository.zoo.DefaultZooProvider"
-        )
-        provides(
-            "ai.djl.engine.EngineProvider"
-        ).with(
+            "ai.djl.repository.zoo.DefaultZooProvider")
+        provides("ai.djl.engine.EngineProvider").with(
             "ai.djl.engine.rust.RsEngineProvider",
-            "ai.djl.pytorch.engine.PtEngineProvider"
-        )
+            "ai.djl.pytorch.engine.PtEngineProvider")
 
     }
     jpackage {
         outputDir = "distribution"
+        skipInstaller = true
+
+        imageOptions.addAll(listOf(
+            "--java-options", "--enable-native-access=jabkit.merged.module"))
 
         // See https://docs.oracle.com/en/java/javase/24/docs/specs/man/jpackage.html#platform-dependent-options-for-creating-the-application-package for available options
         if (org.gradle.internal.os.OperatingSystem.current().isWindows) {
@@ -292,7 +205,6 @@ jlink {
                     "--win-console"
                 )
             )
-           skipInstaller = true
         } else if (org.gradle.internal.os.OperatingSystem.current().isLinux) {
             imageOptions.addAll(
                 listOf(
@@ -300,9 +212,6 @@ jlink {
                     "--app-version", "$version"
                 )
             )
-            skipInstaller = true
-        } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX) {
-            skipInstaller = true
         }
     }
 }
